; ModuleID = '/home/carl/AnghaBench/vlc/src/playlist/extr_randomizer.c_randomizer_Remove.c'
source_filename = "/home/carl/AnghaBench/vlc/src/playlist/extr_randomizer.c_randomizer_Remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.randomizer = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @randomizer_Remove(%struct.randomizer* %0, i32** %1, i64 %2) #0 {
  %4 = alloca %struct.randomizer*, align 8
  %5 = alloca i32**, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store %struct.randomizer* %0, %struct.randomizer** %4, align 8
  store i32** %1, i32*** %5, align 8
  store i64 %2, i64* %6, align 8
  store i64 0, i64* %7, align 8
  br label %8

8:                                                ; preds = %19, %3
  %9 = load i64, i64* %7, align 8
  %10 = load i64, i64* %6, align 8
  %11 = icmp ult i64 %9, %10
  br i1 %11, label %12, label %22

12:                                               ; preds = %8
  %13 = load %struct.randomizer*, %struct.randomizer** %4, align 8
  %14 = load i32**, i32*** %5, align 8
  %15 = load i64, i64* %7, align 8
  %16 = getelementptr inbounds i32*, i32** %14, i64 %15
  %17 = load i32*, i32** %16, align 8
  %18 = call i32 @randomizer_RemoveOne(%struct.randomizer* %13, i32* %17)
  br label %19

19:                                               ; preds = %12
  %20 = load i64, i64* %7, align 8
  %21 = add i64 %20, 1
  store i64 %21, i64* %7, align 8
  br label %8

22:                                               ; preds = %8
  %23 = load %struct.randomizer*, %struct.randomizer** %4, align 8
  %24 = getelementptr inbounds %struct.randomizer, %struct.randomizer* %23, i32 0, i32 0
  %25 = call i32 @vlc_vector_autoshrink(i32* %24)
  ret void
}

declare dso_local i32 @randomizer_RemoveOne(%struct.randomizer*, i32*) #1

declare dso_local i32 @vlc_vector_autoshrink(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
